# product-recommendation-api

./: .env.development  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  xpto_sales_products_mar_may_2024.csv
app/: app.py
app/controller/: recommendation_controller.py
app/models/: product.py
app/views/: recommendations_view.py
tests/unit/: test_recommendation_controller.py
