[tool.poetry]
name = "challenge-meliuz"
version = "0.1.0"
description = "challenge for job at meliuz"
authors = ["Victor Thury <victorhauache@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
